--- a/wp-content/themes/aviation/scss/_header.scss
+++ b/wp-content/themes/aviation/scss/_header.scss
@@ -422,7 +422,7 @@ body:not(.home) {
             position: absolute;
             top: 36%;
             right: 0px;
-            z-index: 990;
+            z-index: 991;
 
             @media all and (max-width: 909px) {
                 display: none;
